--- a/.github/workflows/calibre-news.yml
+++ b/.github/workflows/calibre-news.yml
@@ -96,9 +96,8 @@ jobs:
         if: ${{ success() }}
         run: |
           convert_ebook() {
-            mkdir ebooks
             ebook_name="${recipe_path%.*}"
-            ebook_path="ebooks/$ebook_name.${ext,,}"
+            ebook_path="$ebook_name.${ext,,}"
             echo "Converting \"$recipe_path\" > \"$ebook_path\"..."
             arguments="--authors=\"$author\" --publisher=\"$publisher\""
             cover="covers/${ebook_name}.png"
@@ -121,6 +120,8 @@ jobs:
           if [ $count -eq 0 ]; then
             echo 'No ebook needs send'; exit 1
           fi
+          mkdir ebooks
+          mv "*.${ext,,}" ebooks
       - name: Sending Ebook
         if: ${{ success() }}
         run: |
@@ -134,6 +135,7 @@ jobs:
           done < <(find . -maxdepth 1 -type f -name "*.${ext,,}" -print0)
           echo "All jobs done"
       - name: Storing Ebook
+        if: ${{ success() }}
         uses: actions/upload-artifact@v4
         with:
           name: Calibre-News-Delivery
