--- a/.github/workflows/calibre-news.yml
+++ b/.github/workflows/calibre-news.yml
@@ -136,7 +136,7 @@ jobs:
           done < <(find . -maxdepth 1 -type f -name "*.${ext,,}" -print0)
           echo "All jobs done"
       - name: Collecting Ebook
-        if: ${{ success }}
+        if: ${{ success() }}
         run: |
           mkdir ebooks
           mv *.${ext,,} ebooks
