--- a/.github/workflows/calibre-news.yml
+++ b/.github/workflows/calibre-news.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: calibre-news
     env:
+      output: converted_ebooks
       publisher: bookfere.com
       author: Calibre News Delivery
       relay: ${{ secrets.SMTP }}
@@ -95,6 +96,7 @@ jobs:
       - name: Converting Ebook
         if: ${{ success() }}
         run: |
+          mkdir $output
           convert_ebook() {
             ebook_name="${recipe_path%.*}"
             ebook_path="$ebook_name.${ext,,}"
@@ -107,7 +109,7 @@ jobs:
             echo $arguments | xargs ebook-convert "$recipe_path" "$ebook_path"
             title=$(ebook-meta "${ebook_path}" | grep '^Title *:' |
               sed 's/^Title *: *\(.*\)/\1/')
-            new_ebook_path="${title}.${ext,,}"
+            new_ebook_path="${output}/${title}.${ext,,}"
             echo "Renaming \"$ebook_path\" > \"$new_ebook_path\""
             mv "$ebook_path" "$new_ebook_path"
           }
@@ -115,7 +117,7 @@ jobs:
             convert_ebook &
           done < temp_recipe_list.txt
           wait
-          count=$(find . -maxdepth 1 -type f -name "*.${ext,,}" | wc -l)
+          count=$(find "$output" -type f -name "*.${ext,,}" | wc -l)
           echo "Ebook count: $count"
           if [ $count -eq 0 ]; then
             echo 'No ebook needs send'; exit 1
@@ -129,20 +131,15 @@ jobs:
               filename="$(basename "$ebook_path")"
               title="${filename%.*}"
               echo "Sending: \"$filename\""
-              calibre-smtp -a "${filename}" -r "$relay" --port="$port" \
+              calibre-smtp -a "$ebook_path" -r "$relay" --port="$port" \
                 -e "${encrypt^^}" -u "$from" -p "$secret" -s "$title" \
                 "$from" "$to" "Deliver \"${title}\""
             fi
-          done < <(find . -maxdepth 1 -type f -name "*.${ext,,}" -print0)
+          done < <(find "$output" -type f -name "*.${ext,,}" -print0)
           echo "All jobs done"
-      - name: Collecting Ebook
-        if: ${{ success() }}
-        run: |
-          mkdir ebooks
-          mv *.${ext,,} ebooks
       - name: Storing Ebook
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
         with:
           name: Calibre-News-Delivery
-          path: ebooks/
+          path: ${{ env.output }}
